--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="normalize.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Alfa+Slab+One&family=Poppins:wght@400;500;700;800;900&display=swap"
     rel="stylesheet">
